API_Reference/milvus-sdk-node/v3.0.x/Partitions/hasPartition.md
# hasPartition()

This operation checks whether the specified partition exists in the specified collection.

```javascript
await milvusClient.hasPartition(data)
```

## Request Syntax

```javascript
await milvusClient.hasPartition({
    db_name: string,
    collection_name: string,
    partition_name: string,
    timeout?: number
 })
```

**PARAMETERS:**

- **db_name** (*string*) -

    The name of the database that holds the target collection.

- **collection_name** (*string*) -

    **[REQUIRED]**

    The name of an existing collection.

- **partition_name** (*string*)

    **[REQUIRED]**

    The name of the partition to check.

- **timeout** (*number*)  

    The timeout duration for this operation. 

    Setting this to **None** indicates that this operation timeouts when any response arrives or any error occurs.

**RETURNS** *Promise<BoolResponse>*

This method returns a promise that resolves to a **BoolResponse** object.

```javascript
{
    value: boolean,
    status:  ResStatus
}
```

**PARAMETERS:**

- **value** (*boolean*) -
A boolean that indicates whether the requested partition exists in the collection. It is **true** when the partition exists and **false** when it does not.

- **ResStatus**
A **ResStatus** object.

    - **code** (*number*) -

        A code that indicates the operation result. It remains **0** if this operation succeeds.

    - **error_code** (*string* | *number*) -

        An error code that indicates an occurred error. It remains **Success** if this operation succeeds.

    - **reason** (*string*) -

        The reason that indicates the reason for the reported error. It remains an empty string if this operation succeeds.

## Example

```javascript
new MilvusClient({
    address: 'localhost:19530',
    token: 'root:Milvus',
}).hasPartition({
    collection_name: 'my_collection',
    partition_name: 'my_partition',
 });
```

